--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-eureka.client.serviceUrl.defaultZone: https://canoo-cloud-discovery-service.herokuapp.com/
+eureka.client.serviceUrl.defaultZone: https://canoo-cloud-discovery-service.herokuapp.com/eureka/
