--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,2 @@
 eureka.client.serviceUrl.defaultZone: https://canoo-cloud-discovery-service.herokuapp.com/eureka/
+eureka.client.fetch-registry=false
