--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,6 @@
 eureka.client.serviceUrl.defaultZone: https://canoo-cloud-discovery-service.herokuapp.com/eureka/
 eureka.client.fetch-registry=false
+
+hazelcast.server.name=https://canoo-cloud-eventbus.herokuapp.com
+hazelcast.port=8000
+hazelcast.group.name=micro-landscape
