--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 eureka.client.serviceUrl.defaultZone: https://canoo-cloud-discovery-service.herokuapp.com/eureka/
 eureka.client.fetch-registry=false
 
-hazelcast.server.name=https://canoo-cloud-eventbus.herokuapp.com
+hazelcast.server.name=canoo-cloud-eventbus
 hazelcast.port=8080
 hazelcast.group.name=micro-landscape
