--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,7 @@
 eureka.client.serviceUrl.defaultZone: https://canoo-cloud-discovery-service.herokuapp.com/eureka/
 eureka.client.fetch-registry=false
+eureka.instance.hostname: ${DOMAIN_NAME}
+eureka.instance.nonSecurePort: 80
 
 hazelcast.server.name=canoo-cloud-eventbus
 hazelcast.port=8080
