--- a/canoo-cloud-eventbus.properties
+++ b/canoo-cloud-eventbus.properties
@@ -1,3 +1,5 @@
 hazelcast.frontend.url=http://localhost:8080/mancenter
 hazelcast.frontend.enabled=false
 
+eureka.instance.hostname=canoo-cloud-eventbus.herokuapp.com
+eureka.instance.nonSecurePort=80
